@@ -1,17 +1,29 @@
 CREATE TABLE actions_tmp (
-	actionid		bigint unsigned		DEFAULT '0'	NOT NULL,
-	userid		bigint unsigned		DEFAULT '0'	NOT NULL,
-	subject		varchar(255)		DEFAULT ''	NOT NULL,
-	message		blob		DEFAULT ''	NOT NULL,
-	recipient		integer		DEFAULT '0'	NOT NULL,
-	source		integer		DEFAULT '0'	NOT NULL,
-	actiontype		integer		DEFAULT '0'	NOT NULL,
-	evaltype		integer		DEFAULT '0'	NOT NULL,
-	status		integer		DEFAULT '0'	NOT NULL,
-	scripts		blob		DEFAULT ''	NOT NULL,
-	PRIMARY KEY (actionid)
-) ENGINE=InnoDB ;
+        actionid                bigint unsigned         DEFAULT '0'     NOT NULL,
+        eventsource             integer         DEFAULT '0'     NOT NULL,
+        evaltype                integer         DEFAULT '0'     NOT NULL,
+        status          integer         DEFAULT '0'     NOT NULL,
+        PRIMARY KEY (actionid)
+) ENGINE=InnoDB;
 
-insert into actions_tmp select actionid,userid,subject,message,recipient,source,actiontype,0,status,scripts from actions;
+CREATE TABLE operations (
+        operationid             bigint unsigned         DEFAULT '0'     NOT NULL,
+        actionid                bigint unsigned         DEFAULT '0'     NOT NULL,
+        operationtype           integer         DEFAULT '0'     NOT NULL,
+        object          integer         DEFAULT '0'     NOT NULL,
+        objectid                bigint unsigned         DEFAULT '0'     NOT NULL,
+        shortdata               varchar(255)            DEFAULT ''      NOT NULL,
+        longdata                blob            DEFAULT ''      NOT NULL,
+        scripts_tmp             blob            DEFAULT ''      NOT NULL,
+        PRIMARY KEY (operationid)
+) ENGINE=InnoDB;
+CREATE INDEX operations_1 on operations (actionid);
+
+insert into actions_tmp select actionid,source,0,status from actions;
+
+insert into operations select actionid,actionid,actiontype,recipient,userid,subject,message,scripts from actions;
+update operations set longdata=scripts_tmp where operationtype=1;
+alter table operations drop scripts_tmp;
+
 drop table actions;
 alter table actions_tmp rename actions;
