@@ -1,5 +1,6 @@
 Changes for 1.3.4:
 
+ - support of multiple actions per set of conidtions (Alexei)
  - added viwer of dicovery events (Eugene)
  - added quick help for overview (Eugene)
  - developed Dicovery system (Alexei/Eugene)
